# multi-agent-orchestrator

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  TESTING.md  pyproject.toml  requirements.txt  run.py  任务书-Agent工具进化.md
config/: hooks.yaml.example  mcp.yaml.example  memory.yaml  permissions.yaml.example  providers.yaml.example  workers.yaml.example
docs/: B5.4-真实能力评测操作手册.md  Beta3-执行清单.md  Beta4-执行清单.md  Beta5-执行清单.md  Beta6-执行清单.md  Claude与插件接入决策.md  Grok-Build行为契约融合.md  MAO-产品方向与Beta路线图.md  MAO-架构概览.md  MAO-架构设计书.md  OpenCode学习规划.md  Phase1-Provider连接层设计.md  Phase2-对话式交互计划.md  Phase3-流式回答记录.md  Phase4-对话多模型协作记录.md  Phase4.5-权限模式与ShiftTab记录.md  Phase4.5-问题记录与处理总结.md  Phase5-长期记忆与项目上下文记录.md  Phase6-实现记录.md  Phase6-工具生态与外部集成计划.md  Phase6.6-项目结构展示与CLI结果可见性计划.md  Phase7-证据驱动工程Agent计划.md  Plugin-API兼容策略.md  QUICKSTART.en.md  README.md  RELEASE_NOTES_v0.1.0-beta.1.md  RELEASE_NOTES_v0.1.0-beta.2.md  RELEASE_NOTES_v0.1.0-beta.3.md  RELEASE_NOTES_v0.1.0-beta.4.md  RELEASE_NOTES_v0.1.0-beta.5.md  RELEASE_NOTES_v0.1.0-beta.6.md  RELEASE_NOTES_v0.1.0-beta.7.md  UI预设设计说明.md  ccswitch学习笔记.md  error-log.md  v0.2.0-进入条件.md  上下文扩展与长任务稳定性计划.md  升级路线-对标Claude差异.md  参考项目-OpenCode.md  工具开发指南.md  (+21 more)
examples/plugins/mao_wordcount_plugin/: README.md  pyproject.toml
examples/plugins/mao_wordcount_plugin/mao_wordcount_plugin/: __init__.py
scripts/: bench_compaction.py  benchmark_engineering.py  benchmark_live_smoke.py  context_benchmark.py  demo_failover.py  real_collaboration_smoke.py  replay_smart_mining.py  run_ui.py  test_failover.py  verify_distribution.py
src/: version.py
tests/: conftest.py  test_adversarial_tester.py  test_agent.py  test_agent_collaboration.py  test_agent_fixes.py  test_agent_memory.py  test_agent_permission.py  test_agent_stream.py  test_anthropic_native_round.py  test_benchmark_agent.py  test_chat_command_mode.py  test_chat_command_output.py  test_chat_router.py  test_chat_router_stream.py  test_chat_runs_command.py  test_collaboration_boundaries.py  test_compaction_benchmark.py  test_compaction_layers.py  test_compactor.py  test_connection_test.py  test_context_benchmark.py  test_context_budget.py  test_context_observability.py  test_delivery_report.py  (+55 more)
(+142 files in other folders)
