[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multi-agent-orchestrator"
version = "0.1.0b3"
description = "Evidence-driven multi-model engineering agent with explicit execution boundaries."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Wanbinyu" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
]
dependencies = [
  "anthropic>=0.28.0",
  "openai>=1.30.0",
  "pydantic>=2.7.0",
  "pyyaml>=6.0",
  "httpx>=0.27.0",
  "python-dotenv>=1.0.0",
  "typer>=0.12.0",
  "rich>=13.7.0",
  "questionary>=2.0.0",
  "prompt_toolkit>=3.0.0",
  "fastapi>=0.111.0",
  "uvicorn>=0.30.0",
  "jinja2>=3.1.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0.0"]

[project.scripts]
mao = "run:main"
mao-ui = "src.ui.cli:main"

[project.urls]
Repository = "https://github.com/Wanbinyu/multi-agent-orchestrator"
Issues = "https://github.com/Wanbinyu/multi-agent-orchestrator/issues"

[tool.setuptools]
py-modules = ["run"]

[tool.setuptools.packages.find]
include = ["src*"]

[tool.setuptools.package-data]
"src.ui" = ["templates/*.html", "static/css/*.css", "static/js/*.js"]
"src.resources" = ["*.example"]

[tool.pytest.ini_options]
testpaths = ["tests"]
